<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/img_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@+id/imgLogo"
            android:layout_marginBottom="50dp"
            android:id="@+id/tvsilahkan"
            android:text="@string/tv_silahkan"/>

        <EditText
            android:layout_below="@id/tvsilahkan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/etUsername"
            android:hint="@string/hint_username"
            android:drawableStart="@drawable/ic_person"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/hint_username"/>

        <EditText
            android:layout_below="@id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_lock"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/hint_password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            android:hint="@string/hint_login" />

        <TextView
            android:layout_below="@id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_createaccount"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:id="@+id/tvCreateAccount"/>
    </RelativeLayout>
</LinearLayout>